# polar-flow-server

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  index.html  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  docker-compose.smoke.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: claude-code-review.yml  claude.yml  dependabot-automerge.yml  docker-smoke.yml  docs.yml  lint.yml  publish.yml  security.yml  tests.yml
adr/001-per-user-api-keys/: index.html
alembic/: env.py
alembic/versions/: 5e2dee2daae6_add_api_keys_table.py  94e67d473306_initial_schema_with_all_tables.py  b2c3d4e5f678_add_admin_users_table.py  c4d5e6f7g8h9_add_per_user_api_keys.py  d5e6f7g8h9i0_add_user_baselines_and_indices.py  e6f7g8h9i0j1_add_pattern_analyses_table.py  f4937396683c_initial_schema.py  f7g8h9i0j1k2_add_sync_logs_table.py
api/overview/: index.html
architecture/: index.html
docs/: architecture.md  index.md  integration.md  quickstart.md
docs/adr/: 001-per-user-api-keys.md
docs/api/: overview.md
docs/local/: ARCHITECTURE.md
integration/: index.html
local/ARCHITECTURE/: index.html
quickstart/: index.html
scripts/: test_e2e.py
search/: search_index.json
src/polar_flow_server/: __init__.py  app.py  cli.py  routes.py
src/polar_flow_server/admin/: __init__.py  auth.py  routes.py
src/polar_flow_server/api/: __init__.py  baselines.py  data.py  export.py  health.py  insights.py  keys.py  patterns.py  sleep.py  sync.py
src/polar_flow_server/core/: api_keys.py  auth.py  config.py  database.py  password.py  security.py  setup_token.py
src/polar_flow_server/middleware/: __init__.py  rate_limit.py  security_headers.py
src/polar_flow_server/models/: __init__.py  activity.py  activity_samples.py  admin_user.py  api_key.py  base.py  baseline.py  cardio_load.py  continuous_hr.py  ecg.py  exercise.py  pattern.py  recharge.py  settings.py  sleep.py  sleepwise_alertness.py  sleepwise_bedtime.py  spo2.py  sync_log.py  temp_auth_code.py  temperature.py  user.py
src/polar_flow_server/schemas/: __init__.py  insights.py
tests/: __init__.py  conftest.py  test_admin_csrf.py  test_ans_scale_alignment.py  test_api.py  test_api_keys.py  test_baselines.py  test_biosensing_transformers.py  test_client_ip.py  test_insights.py  test_key_persistence.py  test_oauth_callback_allowlist.py  test_patterns.py  test_security_headers.py  test_setup_token.py  test_sync_error_handling.py
tests/fixtures/: __init__.py  analytics_seed.py
(+35 files in other folders)
